--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.14",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "chart": "^0.1.2",
     "chart.js": "^4.4.2",
     "next": "14.1.4",
     "react": "^18",
+    "react-bootstrap": "^2.10.2",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18"
   },
